--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 # command to install dependencies
 #install: "pip install -r requirements.txt"
 # command to run tests
-script: py.test --pyargs thresh -v
+script: python3 -m pytest --pyargs thresh -v
